--- a/screen.css
+++ b/screen.css
@@ -51,8 +51,10 @@ table {
 /* Begin Site CSS */
 body {
 	background-color: #f3f1f1;
+	font-family: 'Playfair Display', serif;
 }
 
+/* Header */
 .header {
 	background-color: #ffffff;
 	height: 35px;
@@ -64,19 +66,21 @@ body {
 	font-weight: bold;
 }
 
+/* Contents */
 .contents {
-	margin-left:40px;
-	margin-right: 40px;
+	margin-left: 140px;
+	margin-right:140px;
 }
 
 .content_title {
-	margin-top: 15px;
+	margin-top: 25px;
 	font-weight: bold;
 	text-align: center;
+	font-size: 1.250em;
 }
 
 .my_pic {
-	padding-top: 15px;
+	padding-top: 20px;
 	display: block;
 	margin:auto;
 	width: 100px;
@@ -84,8 +88,59 @@ body {
 }
 
 p {
-	margin-top: 15px;
-	line-height: 1.2;
+	margin-top: 20px;
+	line-height: 1.3;
 	text-align: justify;
-	font-size: 15px;
+	font-size: 1.125em;
+}
+
+a {
+    color: hotpink;
+}
+
+/* Footer */
+footer {
+	margin-top: 20px;
+	border-top: 1px solid #2f4f4f;
+	margin-left: 140px;
+	margin-right:140px;
+	line-height: 1.3;
+	margin-bottom:20px;
+}
+
+#github_icon  {
+	width: 50px;
+}
+
+#facebook_icon  {
+	width: 50px;
+}
+
+li {
+    display: inline;
+}
+
+/* Media Query */
+@media (max-width: 1024px) {
+	.contents {
+		margin-left: 100px;
+		margin-right:100px;
+	}
+	
+	footer {
+		margin-left: 100px;
+		margin-right:100px;
+	}
+}
+
+@media (max-width: 736px) {
+	.contents {
+		margin-left: 40px;
+		margin-right:40px;
+	}
+	footer {
+		margin-left: 40px;
+		margin-right:40px;
+	}
+	
 }
